# ccbud

./: .gitignore  README.md  README.zh-CN.md  package-lock.json  package.json
.github/workflows/: pr-build.yml  release.yml
docs/: HOT-UPDATE.md  i18n.js  index.html  plugin-system.md  site.css
homebrew/Casks/: ccbud.rb
scripts/: build-hotupdate.js  gen-update-keys.js  prepare-presidio.js  prepare-presidio.sh  release.js  sync-clarity.js  update-cask.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: antigravity.rs  claude.rs  claudedesktop.rs  codex.rs  codexconnect.rs  copilot.rs  counttokens.rs  exporthtml.rs  gateway.rs  grok.rs  history.rs  lib.rs  plugin.rs  sidecar.rs  store.rs  usage.rs  ziputil.rs
src-tauri/src/protocol/: anthropic.rs  codex_history.rs  mod.rs  openai_chat_client.rs  openai_responses.rs  stream.rs
src/main/: bootstrap.js  claude.js  claudeDesktop.js  claudeModels.js  codex.js  countTokens.js  exportHtml.js  history.js  hotpaths.js  insights.js  main.js  monitor.js  preload.js  presidio.js  proxy.js  store.js  updater.js  usage.js  zipStore.js
src/main/export-assets/: runtime.js  skin.css
src/renderer/: analytics.js  conversations.js  i18n.js  icons.js  index.html  input.css  popover.html  popover.js  renderer.js  styles.css  tauri-bridge.js
src/shared/: i18n-dict.js
test/: ccbud-meta.test.js  claude.test.js  codex.test.js  count-tokens.test.js  exchange.test.js  head-fallback.test.js  history.test.js  hotupdate.test.js  i18n.test.js  insights.test.js  models.test.js  monitor.test.js  retry.test.js  selftest.js  store.test.js  usage.test.js  zip.test.js
