[package]
name = "app"
version = "1.1.4"
description = "ccbud — Claude Code Gateway"
authors = ["loadchange <soocto@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/ccbud/ccbud"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
# Gateway core (proxy.js → Rust): localhost HTTP server + upstream client + streaming.
axum = "0.8"
reqwest = { version = "0.12", features = ["stream", "gzip", "brotli", "deflate", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "io-util", "time"] }
futures-util = "0.3"
bytes = "1"
async-stream = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["clock"] }
arboard = "3"
tiktoken-rs = "0.6"
sha1 = "0.10"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
rfd = "0.15"
notify-debouncer-mini = "0.4"

# macOS-only: set NSWindow collectionBehavior so the popover floats over fullscreen apps.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

# Size-optimized release build — critical for the <50MB goal.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
