[package]
name = "app"
version = "1.2.1"
description = "ccbud — Coding CLI Buddy"
authors = ["loadchange <soocto@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/ccbud/ccbud"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
# Gateway core: localhost HTTP server + upstream client + streaming.
axum = "0.8"
reqwest = { version = "0.12", features = ["stream", "gzip", "brotli", "deflate", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "io-util", "time"] }
futures-util = "0.3"
bytes = "1"
async-stream = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["clock"] }
arboard = "3"
tiktoken-rs = "0.6"
sha1 = "0.10"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
rfd = "0.15"
notify-debouncer-mini = "0.4"
# Conversation-bundle ZIP (export/import subagents together). Pure-Rust miniz_oxide backend — no
# system zlib, so it cross-compiles cleanly for every release target.
flate2 = "1"
# Protocol translation (chat / responses / messages互转). Reused as the IR + OpenAI/Responses
# codec engine; we add only the Anthropic server-side halves (request-decode / response-encode).
# default-features off to avoid pulling a second reqwest/tls stack (we use our own client); keep
# `streaming` for the SSE stream parsers.
llm-connector = { version = "1.4", default-features = false, features = ["streaming"] }
# Edit Codex's ~/.codex/config.toml in place while preserving the user's formatting + comments
# (connect/disconnect injects a [model_providers.ccbud] block).
toml_edit = "0.22"

# macOS-only: set NSWindow collectionBehavior so the popover floats over fullscreen apps.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

# Size-optimized release build — critical for the <50MB goal.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
